@@ -12,4 +12,4 @@ from lbann.modules.transformer import MultiheadAttention
 from lbann.modules.graph import *
 from lbann.modules.activations import Gelu, Gelu_approx, Silu
 from lbann.modules.pytorch import PytorchMatmul, PytorchLinear, PytorchLayerNorm
-from lbann.modules.transformations import Permute, Cumsum
+from lbann.modules.transformations import Permute, Cumsum, PeriodicPadding3D, PeriodicPadding2D
