@@ -35,6 +35,7 @@ Python front-end:
  - Added Riken as a known compute center
  - Added support for PJM as job launcher
  - Unified convolution/deconvolution interface to better approximate PyTorch.
+ - Added circular (periodic) padding transformation for 2D and 3D tensors
 
 Performance optimizations:
  - Enabled the input layers to use a view of the I/O buffers in the
